# r2flutter

./: .gitignore  AGENTS.md  INFO.md  Makefile  README.md  autogen.sh  config.mk.acr  configure  configure.acr  dart_app.c  dart_app.h  dart_dumper.c  dart_dumper.h  dart_pool_parse.c  dart_pool_parse.h  main.c  meson.build  offsets.json
.github/workflows/: ci.yml
doc/: aotver.md  clusters.md  compstr.md  dartasm.md  ffi.md  functips.md  its.md  learn.md  obfuscate.md  objpool.md  strings.md  support.md  xrefs.md
include/r2flutter/: dart_app.h  dart_cid.h  dart_dumper.h  dart_obf.h  dart_pool_parse.h  dart_r2.h  dart_version.h  r2flutter_version.h  version.h
r2plugin/: README.md  config.mk  meson.build  r2plugins.h  static.cfg
r2plugin/core/: deps.h  deps.mk  meson.build
scripts/: derive_offsets.py  gen_offsets.sh  run_tests.py
src/lib/: dart_app.c  dart_cid.c  dart_dumper.c  dart_obf.c  dart_object.c  dart_pool_classes.c  dart_pool_clusters.c  dart_pool_data_image.c  dart_pool_discovery.c  dart_pool_it.c  dart_pool_model.c  dart_pool_modern.c  dart_pool_names.c  dart_pool_parse.c  dart_pool_parse_priv.h  dart_pool_snapshot.c  dart_pool_strings.c  dart_pool_xrefs.c  dart_r2.c  dart_sbom.c  dart_version.c
src/r2/: Makefile  core_flutter.c  flutter_analysis.c  flutter_analysis.h
src/tool/: main.c
test/bins/ios/AuthPass.app/: Assets.car  Info.plist  Runner
test/bins/ios/AuthPass.app/SC_Info/: Runner.sinf  Runner.supf  Runner.supp  Runner.supx
test/bins/ios/AuthPass.app/_CodeSignature/: CodeResources
test/bins/ios/AuthPass.app/google_sign_in_ios_privacy.bundle/: Info.plist
test/bins/ios/Runner.app/: Info.plist  Runner  embedded.mobileprovision
test/bins/macos/hello/: hello.aot
test/custom/: analyze-aaa-android.json  dump-classes-android-mafia.json  dump-classes-android.json  dump-fields-synthetic-json.json  dump-fields-synthetic-xrefs.json  dump-fields-synthetic.json  dump-fns-ios-authpass.json  dump-fns-ios-runner.json  dump-fns-it-mafia.json  dump-fns-it.json  dump-fns-stubs.json  dump-funcs-ios-authpass.json  dump-funcs-ios-runner.json  dump-funcs-it-mafia.json  dump-funcs-it.json  dump-funcs-stub-naming.json  dump-funcs-stubs.json  dump-it-ios-runner.json  dump-it-json-ios-runner.json  dump-it-r2-ios-runner.json  dump-strings-android.json  dump-strings-ios-runner.json  dump-types-android-mafia.json  dump-types-android.json  dump-types-enum-android-mafia.json  dump-types-enum-ios-runner.json  dump-types-ios-authpass.json  dump-types-ios-runner.json  header-deep-macos.json  header-extended-ios.json  help.json  json-android-mafia.json  json-android.json  json-ios-authpass.json  json-ios-runner.json  json-macos-lc-note.json  obf-funcs-ios.json  obf-it-android.json  obf-map.txt  r2-strings-shortflag.json  (+2 more)
test/db.bad/: json-funcs-ios  json-ios-authpass  text-funcs-ios
test/db/cmd/: classes-android  classes-ios  classes-mafia  classes-mafia-plugin  classes-r2-ios  classes-text-android  dump-it-ios  dvm-android  fields-synthetic  funcs-android  funcs-authpass  funcs-ios  funcs-mafia  funcs-mafia-closure  funcs-mafia-name-pool  funcs-mafia-vm-symbols  header-android  header-authpass  header-deep-macos  header-extended-ios  header-ios  header-mafia  header-markdown  header-text-mafia  help  it-android  it-ios  it-mafia  json-android  json-funcs-ios  json-ios-authpass  json-ios-runner  json-it-ios  obf-map  object-inspect  object-pool-resolve  pp-android  r2-funcs-ios  r2-it-ios  r2-strings-ios  (+19 more)
test/db/extras/: analysis  compstr  r2flutter-help
(+115 files in other folders)
