shared_library(
  'core_flutter',
  '../src/r2/core_flutter.c',
  '../src/r2/flutter_analysis.c',
  '../src/lib/dart_app.c',
  '../src/lib/dart_dumper.c',
  '../src/lib/dart_pool_snapshot.c',
  '../src/lib/dart_pool_discovery.c',
  '../src/lib/dart_pool_names.c',
  '../src/lib/dart_pool_strings.c',
  '../src/lib/dart_pool_data_image.c',
  '../src/lib/dart_pool_it.c',
  '../src/lib/dart_pool_xrefs.c',
  '../src/lib/dart_object.c',
  '../src/lib/dart_sbom.c',
  '../src/lib/dart_pool_clusters.c',
  '../src/lib/dart_pool_classes.c',
  '../src/lib/dart_pool_model.c',
  '../src/lib/dart_pool_parse.c',
  '../src/lib/dart_pool_modern.c',
  '../src/lib/dart_version.c',
  '../src/lib/dart_cid.c',
  '../src/lib/dart_obf.c',
  include_directories: ['../include', include_dirs],
  dependencies: r2_core,
  override_options: ['werror=false'],
  install: true,
  install_dir: r2_plugdir,
)
